--- a/app/src/main/res/layout/fragment_repos_list.xml
+++ b/app/src/main/res/layout/fragment_repos_list.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -29,3 +37,15 @@
         android:layout_below="@id/appbar" />
 
 </RelativeLayout>
+
+<android.support.design.widget.NavigationView
+android:id="@+id/nvView"
+android:layout_width="wrap_content"
+android:layout_height="match_parent"
+android:layout_gravity="start"
+android:background="@color/nav_color"
+android:fitsSystemWindows="true"
+app:menu="@menu/drawer_view"
+app:headerLayout="@layout/nav_header"/>
+
+</android.support.v4.widget.DrawerLayout>
