--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
+<style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+<item name="spinBars">true</item>
+<item name="color">@color/toolbar_color</item>
+</style>
 
 </resources>
