--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,21 +2,27 @@
     android:layout_width="match_parent"
     android:background="@drawable/nav_drawer_background"
     android:layout_height="192dp">
-    <ImageView
-        android:id="@+id/avatar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+
     <TextView
         android:id="@+id/user_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="16dp"
+        android:textSize="14dp"
         android:textStyle="bold"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="false"
         android:paddingStart="16dp"
         android:paddingLeft="16dp"
         android:paddingBottom="5dp" />
+
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="56dp"
+        android:scaleType="fitXY"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
