--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,10 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/drawer_settings"
+        android:checkable="false"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/menu_settings" />
+
     <group
         android:id="@+id/drawer_menu_main"
         android:checkableBehavior="none">
         <item
             android:id="@+id/drawer_signout"
             android:checkable="false"
+            android:icon="@drawable/ic_power_settings_new_black_24dp"
             android:title="@string/menu_signout" />
     </group>
 </menu>
