--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccent">#40ffac</color>
 	<color name="nav_color">#303030</color>
     <color name="toolbar_color">#ffffff</color>
+    <color name="black">#000000</color>
 
 </resources>
