--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryLight">#5C6BC0</color>
+    <color name="colorPrimaryLight">#C5CAE9</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#40ffac</color>
+    <color name="colorAccent">#4CAF50</color>
 	<color name="nav_color">#303030</color>
     <color name="toolbar_color">#ffffff</color>
-    <color name="black">#000000</color>
+    <color name="secondary_text">#727272</color>
+    <color name="text">#212121</color>
 
 </resources>
