--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/repo_name"
@@ -19,8 +22,6 @@
         android:id="@+id/repo_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/repo_name"
-        android:text="Description"
         android:textColor="@color/secondary_text"
         android:paddingLeft="16dp"
         android:paddingRight="16dp" />
@@ -29,8 +30,6 @@
         android:id="@+id/repo_descrition"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/repo_name"
-        android:text="Description"
         android:textColor="@color/secondary_text"
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
