--- a/app/src/main/res/layout/fragment_repo_details.xml
+++ b/app/src/main/res/layout/fragment_repo_details.xml
@@ -1,7 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text"
+        android:text="@string/description_name" />
 
     <TextView
         android:id="@+id/name"
@@ -9,14 +16,33 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_id" />
+
+    <TextView
         android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description" />
+
+    <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/description_none" />
+
+    <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_home_URL" />
 
     <TextView
         android:id="@+id/homeUrl"
@@ -24,9 +50,21 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_defaultbranch" />
+
+    <TextView
         android:id="@+id/defaultBranch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_code_language" />
 
     <TextView
         android:id="@+id/codeLanguage"
@@ -34,14 +72,32 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_size" />
+
+    <TextView
         android:id="@+id/size"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_last_push" />
+
+    <TextView
         android:id="@+id/lastPush"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:textColor="@color/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_open_issues" />
 
     <TextView
         android:id="@+id/openIssues"
