--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -19,14 +19,19 @@
             android:layout_alignParentStart="true"
             android:background="?attr/colorPrimary" />
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/root_activity_layout"
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/root_activity_coordinator_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/main_toolbar">
 
-        </FrameLayout>
+            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/root_activity_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
+            </FrameLayout>
+        </android.support.design.widget.CoordinatorLayout>
 
     </RelativeLayout>
 
