--- a/app/src/main/res/layout/recycler_row_repo_sync.xml
+++ b/app/src/main/res/layout/recycler_row_repo_sync.xml
@@ -19,21 +19,21 @@
         android:paddingTop="8dp" />
 
     <TextView
-        android:id="@+id/repo_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/secondary_text"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp" />
+        android:paddingRight="16dp"
+        android:text="@string/description_last_push" />
 
     <TextView
         android:id="@+id/repo_descrition"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/secondary_text"
-        android:paddingBottom="8dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp" />
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp" />
 
     <View
         android:layout_width="match_parent"
